; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/mm/extr_srmmu.c_srmmu_mk_pte_io.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/mm/extr_srmmu.c_srmmu_mk_pte_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32, i32)* @srmmu_mk_pte_io to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @srmmu_mk_pte_io(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* %4, align 8
  %8 = lshr i64 %7, 4
  %9 = load i32, i32* %6, align 4
  %10 = shl i32 %9, 28
  %11 = sext i32 %10 to i64
  %12 = or i64 %8, %11
  %13 = load i32, i32* %5, align 4
  %14 = call i64 @pgprot_val(i32 %13)
  %15 = or i64 %12, %14
  %16 = call i32 @__pte(i64 %15)
  ret i32 %16
}

declare dso_local i32 @__pte(i64) #1

declare dso_local i64 @pgprot_val(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
